--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     margin: 0;
     display: flex;
@@ -12,7 +16,7 @@ body {
 
 h1 {
     color: #333;
-    font-size: 104px;
+   
 }
 
 header {
